tests/baselines/reference/ParameterList5.errors.txt
==== tests/cases/compiler/ParameterList5.ts (3 errors) ====
    function A(): (public B) => C {
                  ~~~~~~~~~~~~~~~
!!! ParameterList5.ts(1,15): error TS2131: Function declared a non-void return type, but has no return expression.
                   ~~~~~~
!!! ParameterList5.ts(1,16): error TS2246: A parameter property is only allowed in a constructor implementation.
                                ~
!!! ParameterList5.ts(1,29): error TS2095: Cannot find name 'C'.
    }